--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <button class="btn btn-primary bg-orange-500">Explore More</button>
           </div>
         <div>
-            <img src="/images/banner.png" class="max-w-sm" />
+            <img src="./images/banner.png" class="max-w-sm" />
             <div class=" -mt-24 flex items-center drop-shadow-lg bg-white p-4 w-56">
                 <i class="fa-solid fa-star text-3xl text-amber-400"></i>
                 <div >
@@ -72,7 +72,7 @@
 
      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
         <div class="card w-96 p-6 linear-gradient(180deg, #F4F4F4 0%, rgba(244, 244, 244, 0.00) 100%) shadow-xl">
-            <figure><img src="/images/tea-1.png" alt="Shoes" /></figure>
+            <figure><img src="./images/tea-1.png" alt="Shoes" /></figure>
             <div class="card-body items-center">
               <h2 class="text-2xl">Milk Tea</h2>
               <p>Creamer could be replaced by fresh milk</p>
@@ -82,7 +82,7 @@
             </div>
           </div>
         <div class="card w-96 p-6 linear-gradient(180deg, #F4F4F4 0%, rgba(244, 244, 244, 0.00) 100%) shadow-xl">
-            <figure><img src="/images/tea-2.png" alt="Shoes" /></figure>
+            <figure><img src="./images/tea-2.png" alt="Shoes" /></figure>
             <div class="card-body items-center">
               <h2 class="text-2xl">Milk Tea</h2>
               <p>Creamer could be replaced by fresh milk</p>
@@ -92,7 +92,7 @@
             </div>
           </div>
         <div class="card w-96 p-6 linear-gradient(180deg, #F4F4F4 0%, rgba(244, 244, 244, 0.00) 100%) shadow-xl">
-            <figure><img src="/images/tea-3.png" alt="Shoes" /></figure>
+            <figure><img src="./images/tea-3.png" alt="Shoes" /></figure>
             <div class="card-body items-center">
               <h2 class="text-2xl">Milk Tea</h2>
               <p>Creamer could be replaced by fresh milk</p>
@@ -102,7 +102,7 @@
             </div>
           </div>
         <div class="card w-96 p-6 linear-gradient(180deg, #F4F4F4 0%, rgba(244, 244, 244, 0.00) 100%) shadow-xl">
-            <figure><img src="/images/tea-4.png" alt="Shoes" /></figure>
+            <figure><img src="./images/tea-4.png" alt="Shoes" /></figure>
             <div class="card-body items-center">
               <h2 class="text-2xl">Milk Tea</h2>
               <p>Creamer could be replaced by fresh milk</p>
@@ -116,8 +116,8 @@
 <section class="my-24 flex flex-col lg:flex-row">
     <div class="grid gap-6 grid-cols-1 md:grid-cols-2 flex-1">
     <div></div>
-    <div class="row-span-2"> <img src="/images/fresh-1.png" alt=""> </div>
-    <div class="row-span-2"><img src="/images/fresh-2.png" alt=""></div>
+    <div class="row-span-2"> <img src="./images/fresh-1.png" alt=""> </div>
+    <div class="row-span-2"><img src="./images/fresh-2.png" alt=""></div>
     <div></div>
     </div>
     <div class="space-y-5 flex-1">
@@ -138,7 +138,7 @@
 <div>
     
     <div class="relative p-10 rounded-lg bg-white">
-        <img class="absolute -top-5 -left-10" src="/images/client.png" alt="">
+        <img class="absolute -top-5 -left-10" src="./images/client.png" alt="">
         <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
         <h4 class="text-xl font-extrabold">Ilham Yud</h4>
         <p>Business</p>
