--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <button class="btn btn-primary bg-orange-500">Explore More</button>
           </div>
         <div>
-            <img src="/images/banner.png" class="max-w-sm" />
+            <img src="images/banner.png" class="max-w-sm" />
             <div class=" -mt-24 flex items-center drop-shadow-lg bg-white p-4 w-56">
                 <i class="fa-solid fa-star text-3xl text-amber-400"></i>
                 <div >
